# ChessMoveHeatmap

./: .gitattributes  .gitignore  .pylintrc  LICENSE  README.md  main.py  main_basic.py  main_basic_piece_counts.py  main_basic_piece_counts_databased.py  play.py  play_deeper.py  pyproject.toml  qtable_schema_migrator.py  requirements.txt  setup.py  standalone_color_legend.py
.github/: .README.md  README.md
chmengine/: README.md  __init__.c  __init__.py  qtable_schema_migrator.py
chmutils/: README.md  __init__.c  __init__.py  base_chess_app.c  base_chess_app.py  base_chess_tk_app.c  base_chess_tk_app.py  concurrent.c  concurrent.py  game_builder.c  game_builder.py  player.c  player.py  promotion_dialog.c  promotion_dialog.py  system_info.py
docs/: .buildinfo  COLORALGO.md  PICKMOVEALGO.md  STOCKFISHDEVTERMS.md  api_reference.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
heatmaps/: README.md  __init__.c  __init__.py
pgns/: 2025.03.02_chmengine.CMHMEngine(depth=3)_vs_Phillyclause89_1.pgn  2025.03.03_Phillyclause89_vs_chmengine.CMHMEngine(depth=3)_1.pgn  2025.03.04_Phillyclause89_vs_chmengine.CMHMEngine(depth=3)_2.pgn  2025.03.04_chmengine.CMHMEngine(depth=3)_vs_Phillyclause89_1.pgn  2025.03.05_Phillyclause89_vs_chmengine.CMHMEngine(depth=3)_1.pgn  2025.03.06_chmengine.CMHMEngine(depth=3,)_vs_Phillyclause89_1.pgn  2025.03.07_Phillyclause89_vs_chmengine.CMHMEngine(depth=3)_1.pgn  2025.03.08_Phillyclause89_vs_chmengine.CMHMEngine2(depth=1)_2.pgn  2025.03.12_CMHMEngine2_vs_CMHMEngine2_1.pgn  (+46 more)
(+1890 files in other folders)
